	  data.  From Ken Pettit (2013-10-30).
	* apps/nshlib/nsh_dbgcmds.c and others:  Add skip= and count=
	  options to the hexdump command.  From Ken Pettit (2013-11-1).
	* apps/platform/mikroe-stm32f4:  Now uses /dev/config for configuration
	  data storage.  From Ken Pettit (2013-11-1).
	* apps/platform/Makefile:  Was not dealing with the bin sub-directory
	  correctly (2013-11-2).
	* apps/examples/configdata:  A unit test for the MTD configuration
	  data driver from Ken Pettit (2013-11-4).
	* apps/platform/mikroe-stm32f4:  Updated to use new MTD configuration
	  driver features.  From Ken Pettit (2013-11-1).
	* apps/nshlib/nsh.h:  Allow USB trace without a USB console. From
	  David Sidrane (2013-11-06).
	* apps/system/composite/composite_main.c:  The wrong handle was getting
	  nullified.  From David Sidrane (2013-11-7).
	* apps/system/nxplayer: Play thread stack size is now configurable.  All
	  NxPlayer threads now have names assigned via pthread_setname_np().
	  From Ken Pettit (2013-11-10).
	* apps/examples/i2schar:  The beginning of an I2S test based on the I2S
	  character driver (2013-11-10).
	* apps/nshlib/nsh_mntcmds.c:  Mount command updates from Ken Pettit
	  (2013-11-17).
	* apps/examples/hidkbd/hidkbd_main.c:  Now calls a function named
	  arch_usbhost_initialize() that must be provided by the platform-
	  specific code (2013-11-29).
	* apps/nshlib/nsh_fscmds.c:  Add an option to the mkfatfs command to
	  specify FAT12, FAT16, or FAT32 (2013-12-5).

6.33 2014-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* apps/nshlib/nsh_mntcmds.c:  Modified the df -h logic to eliminate
	  truncating numbers in conversion (like 7900 -> 7M).  From Ken
	  Pettit (2013-12-12).
	* Moved configs/stm3240g-eval/src/up_cxxinitialize.c to
	  apps/platform/stm3240g-eval/up_cxxinitialize.c:  Now it is available
	  in user-space in the kernel mode build (2013-12-29).
	* apps/examples/mount/Kconfig:  Fill in empty Kconfig file (2013-12-31).
