@@ -752,4 +752,6 @@
 	  apps/platform/stm3240g-eval/up_cxxinitialize.c:  Now it is available
 	  in user-space in the kernel mode build (2013-12-29).
 	* apps/examples/mount/Kconfig:  Fill in empty Kconfig file (2013-12-31).
+	* builtin/Makefile: Fixes for native Windows build from Max Holtzberg
+	  (2014-1-4).
 
